--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -5,9 +5,10 @@
     <mat-card-subtitle>{{quizInput.created}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-subtitle>Created by: {{quizInput.user.username}}</mat-card-subtitle>
+  
+  <mat-card-subtitle>Created by: {{quizInput.user?.username}} </mat-card-subtitle>
   <mat-card-content>
-    <p>In this quiz we have {{quizInput.questions.length}} question{{quizInput.questions.length>1 || quizInput.questions.length===0?'s':''}}</p>
+    <p>In this quiz we have {{quizInput.questions?.length}} question{{quizInput.questions?.length>1 || quizInput.questions?.length===0?'s':''}}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button routerLink="../display-quiz/{{quizInput._id}}">Start Quiz</button>
