--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -12,5 +12,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button routerLink="../display-quiz/{{quizInput._id}}">Start Quiz</button>
+    <button mat-button (click)="deleteQuizClicked()">Delete Quiz</button>
+    <button mat-button (click)="updateQuizClicked()">Update Quiz</button>
   </mat-card-actions>
 </mat-card>
