--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
             <mat-card-title id="login">Login</mat-card-title>
-            <mat-card-subtitle>to find a sitter or baby</mat-card-subtitle>
+            <mat-card-subtitle>To start quizzin it up!</mat-card-subtitle>
           </mat-card-header>
           <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
           <mat-card-content>
@@ -55,7 +55,5 @@
 
 </mat-grid-list>
 
-<button routerLink="josef">Go to Josef (7 points)</button>
-<button routerLink="morten">Go to Morten (0 Morten)</button>
 
 <router-outlet></router-outlet>
