--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 <!-- Navigation for the child routes -->
 <mat-toolbar color="primary">
   <span >Quiz App</span>
+  <button mat-button routerLink="/portal">Portal</button>
   <button mat-button routerLink="about">About</button>
   <button mat-button routerLink="contact">Contact</button>
-
+  <button mat-button *ngIf="!loggedIn" routerLink="login">Login</button>
+   
   <!-- This fills the remaining space of the current row -->
   <span class="example-fill-remaining-space"></span>
 
-  <button mat-button *ngIf="!loggedIn" routerLink="login">Login</button>
+  
   <button mat-button *ngIf="loggedIn" (click)="onLogoutClick()">Logout</button>
 </mat-toolbar>
 
