--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -6,3 +6,11 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+.delete-icon {
+  margin-left: 20px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
