--- a/src/app/update-quiz/update-quiz.component.html
+++ b/src/app/update-quiz/update-quiz.component.html
@@ -14,16 +14,16 @@
   <div formArrayName="questions" *ngFor="let question of updateQuiz.controls.questions.controls; let j=index " >
     <div [formGroupName]="j">
     <mat-form-field style="margin-right: 10px;" >
-      <input matInput formControlName="title" value="{{question.value.title.title}}">
+      <input matInput formControlName="title" value="{{question.value.title}}">
       
       
       <!--<input matInput value="{{question.value.questions}}">-->
     </mat-form-field >
     <div formArrayName="options" >
-    <div *ngFor="let option of question.controls.value.title.options; let i=index" >
+    <div *ngFor="let option of question.controls.options; let i=index" >
       <div [formGroupName]="i">
         <mat-form-field style="margin-right: 10px;" >
-        <input matInput formControlName="answer" name="{{option}}" >
+        <input matInput formControlName="answer" name="{{option.value.answer}}" >
 
       </mat-form-field >
         <div *ngIf="option.correct === true">
