--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,36 @@
-<p>
-  about works!
-</p>
+<div  style="justify-content: center; display: flex;">
+<mat-card class="example-card"  >
+
+
+  <mat-card-header >
+    <mat-card-title>Administrator</mat-card-title>
+    <mat-card-subtitle>Andreas Jepsen Nielsen</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.0-9/10369734_10202176996529696_8156619895104577632_n.jpg?_nc_cat=100&_nc_ht=scontent-arn2-2.xx&oh=25c1aad74d1f9f9325167f27fc12c861&oe=5D56E2AF" alt="Andreas">
+  
+  <mat-card-subtitle>Created by: </mat-card-subtitle>
+  <mat-card-content>
+   
+  </mat-card-content>
+  <mat-card-actions>
+    
+  </mat-card-actions>
+</mat-card>
+<mat-card class="example-card"  >
+
+
+  <mat-card-header >
+    <mat-card-title>Administrator</mat-card-title>
+    <mat-card-subtitle>Lukas Lundø Nielsen</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://cdn.discordapp.com/attachments/437924508213575680/581869436059910202/unknown.png" alt="Lukas">
+  
+  <mat-card-subtitle>Created by: </mat-card-subtitle>
+  <mat-card-content>
+   
+  </mat-card-content>
+  <mat-card-actions>
+    
+  </mat-card-actions>
+</mat-card>
+</div>
