--- a/src/app/display-quizzes/display-quizzes.component.html
+++ b/src/app/display-quizzes/display-quizzes.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="isLoading"> 
   Please wait, we are loading the quizzes
 </div>
-<div >
-  <mat-form-field>
+<div style="text-align: center" >
+  <mat-form-field style="text-align: center">
     <input matInput [(ngModel)]="search" placeholder="Search for a quiz" value="">
   </mat-form-field>
 </div>
