--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "theme.scss";
+@include mat-core();
+@include angular-material-theme($my-theme);
