--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,13 +8,9 @@
   </mat-card-header>
   <img mat-card-image src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.0-9/10369734_10202176996529696_8156619895104577632_n.jpg?_nc_cat=100&_nc_ht=scontent-arn2-2.xx&oh=25c1aad74d1f9f9325167f27fc12c861&oe=5D56E2AF" alt="Andreas">
   
-  <mat-card-subtitle>Created by: </mat-card-subtitle>
-  <mat-card-content>
-   
-  </mat-card-content>
-  <mat-card-actions>
-    
-  </mat-card-actions>
+  <mat-card-subtitle><mat-icon>mail_outline</mat-icon><b class="txt">E-mail: </b><a href="mailto:ajnielsen1995@gmail.com">ajnielsen1995@gmail.com</a> </mat-card-subtitle>
+  <mat-card-subtitle><mat-icon>perm_phone_msg</mat-icon><b class="txt">Phone number: </b><a href="tel:+4591663421">+45 91 66 34 21</a></mat-card-subtitle>
+  
 </mat-card>
 <mat-card class="example-card"  >
 
@@ -25,12 +21,8 @@
   </mat-card-header>
   <img mat-card-image src="https://cdn.discordapp.com/attachments/437924508213575680/581869436059910202/unknown.png" alt="Lukas">
   
-  <mat-card-subtitle>Created by: </mat-card-subtitle>
-  <mat-card-content>
-   
-  </mat-card-content>
-  <mat-card-actions>
-    
-  </mat-card-actions>
+  <mat-card-subtitle><mat-icon class="material-icons">mail_outline</mat-icon><b class="txt">E-mail: </b><a href="mailto:lukasnielsen98@gmail.com">lukasnielsen98@gmail.com</a></mat-card-subtitle>
+  <mat-card-subtitle><mat-icon>perm_phone_msg</mat-icon><b class="txt">Phone number: </b><a href="tel:+4523951849">+45 23 95 18 49</a></mat-card-subtitle>
+  
 </mat-card>
 </div>
