--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -11,3 +11,14 @@
     flex: 1 1 auto;
     
   }
+
+  .material-icons{
+    display: inline-flex;
+    vertical-align: top;
+}
+
+.txt{
+  font-size:14px;
+  line-height:24px;
+  padding-left:10px;
+ }
