--- a/src/app/display-quizzes/display-quizzes.component.scss
+++ b/src/app/display-quizzes/display-quizzes.component.scss
@@ -4,3 +4,11 @@
     margin-right: 10px;
     float: left;
 }
+
+.loader {
+    position:fixed;
+    left: 46%;
+    width: 120px;
+    height: 120px;
+  }
+  
