--- a/src/app/display-quizzes/display-quizzes.component.scss
+++ b/src/app/display-quizzes/display-quizzes.component.scss
@@ -1,14 +1,17 @@
 .my-card {
     max-width: 300px;
-    margin-bottom: 50px;
-    margin-right: 10px;
-    float: left;
+    margin-left: 12px;
+    float:left;
 }
 
 .loader {
     position:fixed;
-    left: 46%;
+    margin-top: 65px;
+    left: 47%;
     width: 120px;
     height: 120px;
   }
+
+
+
   
