--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -12,6 +12,6 @@ mat-card-actions mat-card-subtitle {
 }
 
 .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-image: url('https://cdn.discordapp.com/attachments/437924508213575680/582194718562189340/Default.png');
   background-size: cover;
 }
