--- a/src/app/display-quizzes/display-quizzes.component.html
+++ b/src/app/display-quizzes/display-quizzes.component.html
@@ -1,10 +1,9 @@
 <div *ngIf="isLoading"> 
-  <p class="mat-subheading-2" style="text-align:center">Please wait, we are loading the quizzes</p>
   <mat-spinner class="loader"></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
 <div style="text-align: center">
-  <mat-form-field style="text-align: center; width:20%">
+  <mat-form-field style="text-align: center; width:20%; margin-top: 60px">
     <input matInput [(ngModel)]="search" placeholder="Search for a quiz" value="">
   </mat-form-field>
 </div>
