--- a/src/app/portal/portal.component.scss
+++ b/src/app/portal/portal.component.scss
@@ -1,11 +1,15 @@
-.centered {
-    position: absolute;
-    top: 7%;
-    left: 48%;
-    transform: translate(-50%, -50%);
+.example-fill-remaining-space {
+    /* This fills the remaining space, by using flexbox. 
+       Every toolbar row uses a flexbox row layout. */
+    flex: 1 1 auto;
+    
   }
-  .textPicture {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
+
+mat-toolbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100% !important;
+}
+
