--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <!-- Navigation for the child routes -->
 <mat-toolbar color="primary">
-  <span >Quiz App</span>
+  <img width="127.5px" height="72.5" style="margin-bottom:12px" src="https://media.discordapp.net/attachments/437924508213575680/582913397356494871/Logo.png">
   <button mat-button routerLink="contact">Contact</button>
   <button mat-button routerLink="about">About</button>
-  <button mat-button routerLink="/portal">Portal</button>
+  <button mat-button routerLink="/portal/index">Portal</button>
 
   <!-- This fills the remaining space of the current row -->
   <span class="example-fill-remaining-space"></span>
