--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
               <mat-divider></mat-divider>
               
               <mat-card-subtitle>I want to register instead</mat-card-subtitle>
-              <button type="button" color="primary" mat-raised-button>Register</button>
+              <button type="button" color="primary" [routerLink]="['/home/register']"   mat-raised-button>Register</button>
             </mat-card-actions>
           </mat-card>
     
