--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,15 @@
-<p>
-  contact works!
-</p>
+<div  style="justify-content: center; display: flex;">
+<mat-card class="example-card" style="text-align:center" >
+
+
+  <mat-card-header style="justify-content:center"  >
+    <mat-card-title>Contact</mat-card-title>
+    <mat-card-subtitle>Questions? Suggestions? Use below links to contact us!</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image style="width:80%; " src="http://clipart-library.com/images/LTd5a5Xyc.png" alt="Question">
+  
+  <mat-card-subtitle><mat-icon class="material-icons">mail_outline</mat-icon><b class="txt">E-mail: </b><a href="mailto:info@quizIt.com">info@quizIt.com</a></mat-card-subtitle>
+  <mat-card-subtitle><mat-icon>perm_phone_msg</mat-icon><b class="txt">Phone number: </b><a href="tel:+4549216969">+45 49 21 69 69</a></mat-card-subtitle>
+  
+</mat-card>
+</div>
