--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,3 @@
-<p>
-  page-not-found works!
-</p>
+<div style="text-align: center">
+<img style="height: 50%; width: 50%;" src="https://www.originstorage.com/wp-content/uploads/2018/10/404Error.jpg" >
+</div>
