--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -2,7 +2,7 @@
   <img width="127.5px" height="72.5" style="margin-bottom:12px" src="https://media.discordapp.net/attachments/437924508213575680/582913397356494871/Logo.png">
   <!-- <button mat-button *ngIf="!authService.isLoggedIn" routerLink="portal/find-quiz">Find a quiz</button> -->
   <button id="createQuiz" mat-button routerLink="create-quiz">Create a new quiz</button>
-  <button mat-button routerLink="display-quizzes">Show all quizzes</button>
+  <button id="display-quizzes" mat-button routerLink="display-quizzes">Show all quizzes</button>
   <button mat-button routerLink="/home/about">Home</button>
 
   <!-- This fills the remaining space of the current row -->
